# AdventOfCode2022

./: Cargo.toml
benches/: bench.rs
inputs/: day7.txt
src/: day1.rs  day10.rs  day11.rs  day12.py  day12.rs  day13.py  day14.rs  day15.py  day16.py  day17.py  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  main.rs
