[package]
name = "adventofcode2022"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
# add html-reports as a feature to enable it
criterion = { version = "0.3" } # features = ["html-reports"]
adventofcode2022 = { path = "../AdventOfCode2022" }

[[bench]]
name = "bench"
harness = false

